--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,63 @@
-/* You can add global styles to this file, and also import other style files */
+html, body {
+
+    height: 100%;
+    background-color: #6951F0;
+}
+
+#sidebar {
+
+    height: 100%;
+    min-height: 100vh;
+    min-width: 210px;
+}
+
+#anchor {
+
+    border-radius: 20px;
+}
+
+.form-control:focus{
+
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+#form {
+
+    max-width: 300px;
+}
+
+#buscarGifs {
+    
+    border-radius: 20px;
+    max-width: 300px;
+}
+
+#extensionResultados {
+
+    border-radius: 20px;
+    max-width: 300px;
+    -webkit-appearance: none;
+}
+
+#select {
+
+    border-radius: 20px;
+    max-width: 300px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+#btnBuscar{
+
+    border-radius: 20px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
+
+#btnBorrar{
+
+    border-radius: 20px;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+}
