--- a/src/app/gifs/components/resultados/resultados.component.html
+++ b/src/app/gifs/components/resultados/resultados.component.html
@@ -8,7 +8,7 @@
             <div 
                 class="card mt-3 mb-3">
                 <img 
-                    [src]="gif.images.downsized_medium.url" 
+                    [src]="gif.images.fixed_width.url" 
                     [alt]= "gif.title"
                     class="card-img-top"
                 >
@@ -52,7 +52,7 @@
             <div 
                 class="card mt-3 mb-3">
                 <img 
-                    [src]="gif.images.downsized_medium.url" 
+                    [src]="gif.images.downsized_large.url" 
                     [alt]= "gif.title"
                     class="card-img-top"
                 >
