--- a/src/styles.css
+++ b/src/styles.css
@@ -4,44 +4,66 @@ html, body {
     background-color: #6951F0;
 }
 
-#sidebar {
+*::-webkit-scrollbar {
+    width: 14px;
+    height: 10px;
+    background: #c7c7c7;
+}
+  
+*::-webkit-scrollbar-track:hover {
+    background: #c1c5c9;
+}
 
+*::-webkit-scrollbar-track:active {
+    background: #c1c5c9;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #8b9096;
+    border: .3rem solid #8b9096;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+*::-webkit-scrollbar-thumb:active {
+    background-color: #495057;
+    border-color: #495057;
+}
+
+#sidebar {
     height: 100%;
     min-height: 100vh;
     min-width: 210px;
 }
 
 #anchor {
-
     border-radius: 20px;
 }
 
 .form-control:focus{
-
     -webkit-box-shadow: none;
     box-shadow: none;
 }
 
 #form {
-
     max-width: 300px;
 }
 
 #buscarGifs {
-    
     border-radius: 20px;
     max-width: 300px;
 }
 
 #extensionResultados {
-
     border-radius: 20px;
     max-width: 300px;
-    -webkit-appearance: none;
+    appearance: none;
 }
 
 #select {
-
     border-radius: 20px;
     max-width: 300px;
     -webkit-box-shadow: none;
@@ -49,7 +71,6 @@ html, body {
 }
 
 #btnBuscar{
-
     border-radius: 20px;
     -webkit-box-shadow: none;
     box-shadow: none;
